WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
294143
REGRESSION (
293308@main
): TikTok app crashes under various use cases
https://bugs.webkit.org/show_bug.cgi?id=294143
Summary
REGRESSION (293308@main): TikTok app crashes under various use cases
Brent Fulgham
Reported
2025-06-06 14:13:34 PDT
rdar://152206323
Attachments
Add attachment
proposed patch, testcase, etc.
Brent Fulgham
Comment 1
2025-06-06 14:15:20 PDT
Reintroduce this SPI method implementation to work around the binary incompatibility, but guard it behind both a linked-on check and a app bundle ID check to ensure that there are no new usages of it moving forward.
Brent Fulgham
Comment 2
2025-06-06 14:25:52 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/46441
EWS
Comment 3
2025-06-06 20:23:34 PDT
Committed
295957@main
(9faf72782aa2): <
https://commits.webkit.org/295957@main
> Reviewed commits have been landed. Closing PR #46441 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug