REGRESSION (293308@main): TikTok app crashes under various use cases https://bugs.webkit.org/show_bug.cgi?id=294143 rdar://152206323

Reviewed by Wenson Hsieh.

Reintroduce this SPI method implementation to work around the binary incompatibility, but guard it
behind a linked-on check to ensure that there are no new usages of it moving forward.

* Source/WebKit/UIProcess/API/Cocoa/WKWebView.mm:
(browsingContextControllerMethodStub): Added.
(addBrowsingContextControllerMethodStubIfNeeded): Deleted.
(addBrowsingContextControllerMethodStubsIfNeeded): Added.
(-[WKWebView _initializeWithConfiguration:]): Call renamed method.

Canonical link: https://commits.webkit.org/295957@main